2012-08-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/gperror.h, gpasm/special.c,
    gpasm/processor.c, gpasm/lst.c, gpasm/evaluate.c,
    gpasm/lst.h, gpasm/coff.c, gpasm/util.c, gpasm/directive.c:
    error handling reorganization

2012-08-28  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: iterative reimplementation of macro_parms_simple(),
    macro_parms_unique(), macro_parms_ok();
    goto & call: don't check range, page boundary or bad address in
    relocatble sections

2012-08-27  Molnar Karoly  <proton7@freemail.hu>
  * lkr/18c601_g.lkr: Changed in "NAME=page" the "END=0x1FFFFF" onto
    the "END=0x3FFFF".
  * header/p12cr509a.inc: New? So far not exist, but the MCU included in
    the gpprocessor.c.

2012-08-27  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.old/testall:
    don't stop at the first failure, report the number of tests failed
  * gpasm/scan.l: force the scanner to always-interactive
  * pasm/evaluate.c: iterative reimplementation of list_length()
  * libgputils/gpsymbol.c, libgputils/gpsymbol.h:
    added functions hashfunc_len() and get_symbol_len()
  * gpasm/directive.c:
    fixed bug #253 - "[PIC16F]#ifdef problem around macro"

2012-08-19  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c: implemented but ifdef-ed out the fix for shift left > 32,
    another fix for shift right > 32, taking into accont the sign extension

2012-08-18  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c: implemented but ifdef-ed out the fix for bug
    #252 - "Problems interpreting hex numbers in gpasm" since the current
    behavior is MPASM compatible.

2012-08-16  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx: gpasm expressions are implemented using 32-bit arithmetic.
  * gpasm/util.c: implemented gp_strtoi(), partially fixed bug 
    #252: "Problems interpreting hex numbers in gpasm"
